src/main/webapp/Styles/profile.css
@keyframes shake{
    100% {transform: translate(5px, -10);}
}

.shake{
    animation: shake 0.5s ease;
}

.profile-container {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-areas: "pfp_area label_area";
    column-gap: 1cm;
    justify-content: center;
    align-items: center;
}

.profile-container h1{
    grid-area: label_area;
    display:flex;
    flex-direction:column;

    font-weight:lighter;
    align-items:center;

    width:100%;
    height: fit-content;

    margin-bottom: 20px;
}

.profile-container img{
    grid-area: pfp_area;
}

.buzz-container {
    width: fit-content;
}

#divider {
    width: 100%;
    border-color: #ffb84d;
}

#buzz-content {
    width: 15cm;
    height: fit-content;
}

